Hard coded the urls because of problems with loading the correct config

--- a/src/NCompileBench.Web/Pages/Index.razor
+++ b/src/NCompileBench.Web/Pages/Index.razor
@@ -76,7 +76,7 @@ else
         }
         catch (Exception e)
         {
-            _status = $"$Failed to load top scores. Environment: {HostEnvironment.Environment}. Backend url: {Configuration["BackendUrl"]}. Client backend url: {Client.BaseUrl}";
+            _status = $"Failed to load top scores. Environment: {HostEnvironment.Environment}. Backend url: {Configuration["BackendUrl"]}. Client backend url: {Client.BaseUrl}";
         }
         
         _isBusy = false;
